--- a/.env
+++ b/.env
@@ -1,7 +1,30 @@
-USER_ID="$fbi"
+#######
+#MICRO#
+#######
+
+BFF_HTTP_PORT = 3000
+
+AC_AUTHORIZATION_HTTP_PORT = 3100
+AC_AUTHORIZATION_RPC_PORT = 3101
+
+AC_AUTHENTICATION_HTTP_PORT = 3200
+AC_AUTHENTICATION_RPC_PORT = 3201
+
+###############
+#ELASTICSEARCH#
+###############
+
+
+
+#######
+#NEO4J#
+#######
+
+USER_ID="$fagosit"
 GROUP_ID="$nasa"
 NEO4J_DOCKER_IMAGE=neo4j:5-enterprise
 NEO4J_EDITION=docker_compose
 EXTENDED_CONF=yes
 NEO4J_ACCEPT_LICENSE_AGREEMENT=yes
 NEO4J_AUTH=neo4j/your_password
+
